--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,3 @@
-@import '/config/typography';
-@import '/config/color';
-@import '/config/layout';
+@import 'config/typography';
+@import 'config/color';
+@import 'config/layout';
