Add basic config and example

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,9 @@
+/* Config */
 @import 'config/typography';
 @import 'config/color';
 @import 'config/layout';
+@import 'config/animation';
+@import 'config/depth';
+
+/* Components */
+@import 'components/button';
