--- a/src/main.scss
+++ b/src/main.scss
@@ -4,6 +4,8 @@
 @import 'config/layout';
 @import 'config/animation';
 @import 'config/depth';
+@import 'config/reset';
 
 /* Components */
 @import 'components/button';
+@import 'components/nav';
