--- a/src/components/nav.scss
+++ b/src/components/nav.scss
@@ -1,3 +1,20 @@
 nav {
-  background: #fff;
+  background-color: $background-color;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  box-shadow: $light-shadow;
+  top: 0;
+  right: 0;
+  left: 0;
+  padding: 0 1em;
+
+  ul {
+    display: flex;
+    margin-left: auto;
+
+    li {
+      margin-right: 1em;
+    }
+  }
 }
