--- a/src/config/_layout.scss
+++ b/src/config/_layout.scss
@@ -1,9 +1,9 @@
 body {
-  color: $primary-color;
+  background: $background-color-light;
 }
 
 header {
-  margin: 12vh 1em;
+  margin: 9vh 0;
 }
 
 section {
