--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -1,6 +1,7 @@
 article {
   box-shadow: $light-shadow;
   background-color: $background-color;
+  color: $primary-color;
   
   div {
     padding: 1em;
