--- a/src/components/card.scss
+++ b/src/components/card.scss
@@ -2,6 +2,8 @@ article {
   box-shadow: $light-shadow;
   background-color: $background-color;
   color: $primary-color;
+  margin-bottom: 10vh;
+  font-weight: 200;
   
   div {
     padding: 1em;
