--- a/src/config/_typography.scss
+++ b/src/config/_typography.scss
@@ -27,6 +27,7 @@ h1 {
 
 h2 {
   font-size: 1.953em;
+  font-weight: 700;
 }
 
 h3 {
@@ -35,4 +36,10 @@ h3 {
 
 h4 {
   font-size: 1.25em;
+}
+
+a {
+  font-size: 0.8em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
