--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,7 @@
 @import 'config/reset';
 
 /* Components */
-@import 'components/button';
-@import 'components/nav';
-@import 'components/card';
-@import 'components/header';
+// @import 'components/button';
+// @import 'components/nav';
+// @import 'components/card';
+// @import 'components/header';
